functional ingest, unrun

--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,92 +48,31 @@
     "import tarfile\n",
     "import os\n",
     "import urllib.request\n",
-    "import json"
+    "import json\n",
+    "import shutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                                                    hash  \\\n",
-       "0      0a37f086841ff927ec8bee9f3bdb1048ecfba54b09aea4...   \n",
-       "1      0ac4aa9b5413666a2bd66b96faa0cc8e656144ffcd3511...   \n",
-       "2      0ac36a24aa3dd7e8bd7f009ab6115481812ed053c8b819...   \n",
-       "3      0ac59f02f886c015e0f15c0d0bead2fbfcc3e587d4bb21...   \n",
-       "4      0af93460eb34961e2368a829b874086dde456b83357922...   \n",
-       "...                                                  ...   \n",
-       "13071  ffa9c5c0b315995db25deea05ca1d9fcda925757c30f07...   \n",
-       "13072  ffa492afef9e3f7061af0735e6ac17e84561531fb71b7e...   \n",
-       "13073  ffd7935393ffb9c8a6fb1f3932a0fbcfd0295172bff3f4...   \n",
-       "13074  ffe183625bb11bdf21494d10cdaaaf1f4b5ea2e5748209...   \n",
-       "13075  fff4c39a07f20e062231781a0d7f2e039f59286d3f5d8d...   \n",
-       "\n",
-       "                                                     URI malware_class  \n",
-       "0      http://205.174.165.80/CICDataset/MalDroid-2020...        Adware  \n",
-       "1      http://205.174.165.80/CICDataset/MalDroid-2020...        Adware  \n",
-       "2      http://205.174.165.80/CICDataset/MalDroid-2020...        Adware  \n",
-       "3      http://205.174.165.80/CICDataset/MalDroid-2020...        Adware  \n",
-       "4      http://205.174.165.80/CICDataset/MalDroid-2020...        Adware  \n",
-       "...                                                  ...           ...  \n",
-       "13071  http://205.174.165.80/CICDataset/MalDroid-2020...           SMS  \n",
-       "13072  http://205.174.165.80/CICDataset/MalDroid-2020...           SMS  \n",
-       "13073  http://205.174.165.80/CICDataset/MalDroid-2020...           SMS  \n",
-       "13074  http://205.174.165.80/CICDataset/MalDroid-2020...           SMS  \n",
-       "13075  http://205.174.165.80/CICDataset/MalDroid-2020...           SMS  \n",
-       "\n",
-       "[13076 rows x 3 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hash</th>\n      <th>URI</th>\n      <th>malware_class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0a37f086841ff927ec8bee9f3bdb1048ecfba54b09aea4...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>Adware</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0ac4aa9b5413666a2bd66b96faa0cc8e656144ffcd3511...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>Adware</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0ac36a24aa3dd7e8bd7f009ab6115481812ed053c8b819...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>Adware</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0ac59f02f886c015e0f15c0d0bead2fbfcc3e587d4bb21...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>Adware</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0af93460eb34961e2368a829b874086dde456b83357922...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>Adware</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>13071</th>\n      <td>ffa9c5c0b315995db25deea05ca1d9fcda925757c30f07...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>SMS</td>\n    </tr>\n    <tr>\n      <th>13072</th>\n      <td>ffa492afef9e3f7061af0735e6ac17e84561531fb71b7e...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>SMS</td>\n    </tr>\n    <tr>\n      <th>13073</th>\n      <td>ffd7935393ffb9c8a6fb1f3932a0fbcfd0295172bff3f4...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>SMS</td>\n    </tr>\n    <tr>\n      <th>13074</th>\n      <td>ffe183625bb11bdf21494d10cdaaaf1f4b5ea2e5748209...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>SMS</td>\n    </tr>\n    <tr>\n      <th>13075</th>\n      <td>fff4c39a07f20e062231781a0d7f2e039f59286d3f5d8d...</td>\n      <td>http://205.174.165.80/CICDataset/MalDroid-2020...</td>\n      <td>SMS</td>\n    </tr>\n  </tbody>\n</table>\n<p>13076 rows × 3 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 30
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('MalDroid_ref_raw.csv') as ref_raw_path:\n",
     "    ref_raw = pd.read_csv(ref_raw_path)\n",
     "ref_raw = ref_raw[['hash', 'URI', 'malware_class']]\n",
     "ref_raw = ref_raw.drop([13076])\n",
-    "# Drops final row; does not contain a sample due to parsing issues\n",
-    "ref_raw"
+    "# Drops final row; does not contain a sample due to parsing issues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "http://205.174.165.80/CICDataset/MalDroid-2020/Dataset/Capturing_logs/Adware/0A37F086841FF927EC8BEE9F3BDB1048ECFBA54B09AEA400E980BD3EF301519D.tar.gz\n",
-      "http://205.174.165.80/CICDataset/MalDroid-2020/Dataset/Capturing_logs/Adware/0AC4AA9B5413666A2BD66B96FAA0CC8E656144FFCD351101071F8D028970BEFA.tar.gz\n",
-      "http://205.174.165.80/CICDataset/MalDroid-2020/Dataset/Capturing_logs/Adware/0AC36A24AA3DD7E8BD7F009AB6115481812ED053C8B81967B0796A8D2F098B73.tar.gz\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-ddac806c66f9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;34m'.tar.gz'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msample\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mURI\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mbase_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msample\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmalware_class\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0msample\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mtemp_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0murllib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0murlretrieve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mURI\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtarfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextractall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbase_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\envs\\MalDroid_feature_engineering\\lib\\urllib\\request.py\u001b[0m in \u001b[0;36murlretrieve\u001b[1;34m(url, filename, reporthook, data)\u001b[0m\n\u001b[0;32m    274\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    275\u001b[0m             \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 276\u001b[1;33m                 \u001b[0mblock\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    277\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mblock\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m                     \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\envs\\MalDroid_feature_engineering\\lib\\http\\client.py\u001b[0m in \u001b[0;36mread\u001b[1;34m(self, amt)\u001b[0m\n\u001b[0;32m    455\u001b[0m             \u001b[1;31m# Amount is given, implement using readinto\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    456\u001b[0m             \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbytearray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mamt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 457\u001b[1;33m             \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadinto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    458\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mmemoryview\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobytes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    459\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\envs\\MalDroid_feature_engineering\\lib\\http\\client.py\u001b[0m in \u001b[0;36mreadinto\u001b[1;34m(self, b)\u001b[0m\n\u001b[0;32m    499\u001b[0m         \u001b[1;31m# connection, and the user is reading more bytes than will be provided\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    500\u001b[0m         \u001b[1;31m# (for example, reading in 1k chunks)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 501\u001b[1;33m         \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadinto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    502\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mn\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    503\u001b[0m             \u001b[1;31m# Ideally, we would raise IncompleteRead if the content-length\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\envs\\MalDroid_feature_engineering\\lib\\socket.py\u001b[0m in \u001b[0;36mreadinto\u001b[1;34m(self, b)\u001b[0m\n\u001b[0;32m    587\u001b[0m         \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    588\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 589\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sock\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecv_into\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    590\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    591\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_timeout_occurred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "issue_hashes = []\n",
+    "\n",
     "for sample in ref_raw.itertuples(index=False):\n",
     "    print(sample.URI)\n",
     "    if '.tar.gz' in sample.URI:\n",
@@ -146,17 +85,11 @@
     "            try:\n",
     "                json.load(default_path)\n",
     "            except:\n",
+    "                issue_hashes.append(sample.hash)\n",
     "                continue\n",
-    "        break\n",
-    "    break"
+    "        shutil.move(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json', base_path + '/sample_for_analysis.apk.json')\n",
+    "        shutil.rmtree(base_path + '/sample_for_analysis.apk')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
