--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -72,6 +72,7 @@
    "outputs": [],
    "source": [
     "issue_hashes = []\n",
+    "large_hashes = []\n",
     "\n",
     "for sample in ref_raw.itertuples(index=False):\n",
     "    print(sample.URI)\n",
@@ -87,8 +88,22 @@
     "            except:\n",
     "                issue_hashes.append(sample.hash)\n",
     "                continue\n",
+    "        json_size = os.stat(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json').st_size\n",
+    "        if json_size >= 100000000:\n",
+    "            # GitHub will not host files larger than 100 MB, this removes and logs these files for compatability\n",
+    "            large_hashes.append(sample.hash)\n",
+    "            shutil.rmtree(base_path)\n",
+    "            continue\n",
     "        shutil.move(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json', base_path + '/sample_for_analysis.apk.json')\n",
-    "        shutil.rmtree(base_path + '/sample_for_analysis.apk')"
+    "        shutil.rmtree(base_path + '/sample_for_analysis.apk')\n",
+    "\n",
+    "issue_df = pd.DataFrame(issue_hashes, columns = ['hash'])\n",
+    "with open('issue_hashes.csv') as issue_write:\n",
+    "    issue_df.to_csv(issue_write)\n",
+    "\n",
+    "large_df = pd.DataFrame(large_hashes, columns = ['hash'])\n",
+    "with open('large_hashes.csv') as large_write:\n",
+    "    large_df.to_csv(large_write)"
    ]
   }
  ]
