added recovery variable

--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -73,9 +73,10 @@
    "source": [
     "issue_hashes = []\n",
     "large_hashes = []\n",
+    "last_hash = 'start'\n",
     "\n",
     "for sample in ref_raw.itertuples(index=False):\n",
-    "    print(sample.URI)\n",
+    "    last_hash = sample.hash\n",
     "    if '.tar.gz' in sample.URI:\n",
     "        base_path = sample.malware_class.lower() + '/' + sample.hash\n",
     "        temp_file = urllib.request.urlretrieve(sample.URI, filename=None)[0]\n",
@@ -103,7 +104,8 @@
     "\n",
     "large_df = pd.DataFrame(large_hashes, columns = ['hash'])\n",
     "with open('large_hashes.csv') as large_write:\n",
-    "    large_df.to_csv(large_write)"
+    "    large_df.to_csv(large_write)\n",
+    "\n"
    ]
   }
  ]
