additional recovery infastructure

--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -96,16 +96,25 @@
     "            shutil.rmtree(base_path)\n",
     "            continue\n",
     "        shutil.move(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json', base_path + '/sample_for_analysis.apk.json')\n",
-    "        shutil.rmtree(base_path + '/sample_for_analysis.apk')\n",
-    "\n",
+    "        shutil.rmtree(base_path + '/sample_for_analysis.apk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "issue_df = pd.DataFrame(issue_hashes, columns = ['hash'])\n",
-    "with open('issue_hashes.csv') as issue_write:\n",
+    "with open('issue_hashes.csv', 'w') as issue_write:\n",
     "    issue_df.to_csv(issue_write)\n",
     "\n",
     "large_df = pd.DataFrame(large_hashes, columns = ['hash'])\n",
-    "with open('large_hashes.csv') as large_write:\n",
+    "with open('large_hashes.csv', 'w') as large_write:\n",
     "    large_df.to_csv(large_write)\n",
-    "\n"
+    "\n",
+    "with open('last_hash_processed.txt', 'w') as resume_write:\n",
+    "    resume_write.write(last_hash)"
    ]
   }
  ]
