handling of additional errors

--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -80,18 +80,25 @@
     "    if '.tar.gz' in sample.URI:\n",
     "        base_path = sample.malware_class.lower() + '/' + sample.hash\n",
     "        temp_file = urllib.request.urlretrieve(sample.URI, filename=None)[0]\n",
-    "        file = tarfile.open(temp_file)\n",
-    "        file.extractall(base_path)\n",
-    "        file.close()\n",
+    "        try:\n",
+    "            file = tarfile.open(temp_file)\n",
+    "            file.extractall(base_path)\n",
+    "            file.close()\n",
+    "        except:\n",
+    "            print('Error extracting on hash: ' + sample.hash)\n",
+    "            issue_hashes.append(sample.hash)\n",
+    "            continue\n",
     "        with open(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json') as default_path:\n",
     "            try:\n",
     "                json.load(default_path)\n",
     "            except:\n",
+    "                print('Error loading JSON on hash: ' + sample.hash)\n",
     "                issue_hashes.append(sample.hash)\n",
     "                continue\n",
     "        json_size = os.stat(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json').st_size\n",
     "        if json_size >= 100000000:\n",
     "            # GitHub will not host files larger than 100 MB, this removes and logs these files for compatability\n",
+    "            print('JSON file too large on hash: ' + sample.hash)\n",
     "            large_hashes.append(sample.hash)\n",
     "            shutil.rmtree(base_path)\n",
     "            continue\n",
