--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -87,6 +87,7 @@
     "        except:\n",
     "            print('Error extracting on hash: ' + sample.hash)\n",
     "            issue_hashes.append(sample.hash)\n",
+    "            shutil.rmtree(base_path)\n",
     "            continue\n",
     "        with open(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json') as default_path:\n",
     "            try:\n",
