fixed numba import

--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -50,7 +50,7 @@
     "import urllib.request\n",
     "import json\n",
     "import shutil\n",
-    "import numba"
+    "from numba import jit"
    ]
   },
   {
