--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -50,7 +50,7 @@
     "import urllib.request\n",
     "import json\n",
     "import shutil\n",
-    "from numba import jit"
+    "import numpy as np"
    ]
   },
   {
@@ -81,46 +81,46 @@
     "last_hash = '5ACE49F9F1A70B915A7E469289558C303F51CEEABF9ED6BDB5DC6818743A64CE'\n",
     "last_hash = last_hash.lower()\n",
     "\n",
-    "prev_index = ref_raw['hash'].loc[lambda x: x==last_hash].index\n",
+    "# prev_index = ref_raw['hash'].loc[lambda x: x==last_hash].index\n",
     "ref_raw = ref_raw.iloc[235:]\n",
     "\n",
-    "@jit(nopython=True, parallel=True, fastmath=True)\n",
-    "def ingest_loop(ref_raw):\n",
-    "    for sample in ref_raw.itertuples(index=False):\n",
-    "        last_hash = sample.hash\n",
-    "        if '.tar.gz' in sample.URI:\n",
-    "            base_path = sample.malware_class.lower() + '/' + sample.hash\n",
-    "            temp_file = urllib.request.urlretrieve(sample.URI, filename=None)[0]\n",
+    "def ingest_loop(sample):\n",
+    "    last_hash = sample[0]\n",
+    "    if '.tar.gz' in sample[1]:\n",
+    "        base_path = sample[2].lower() + '/' + sample[0]\n",
+    "        temp_file = urllib.request.urlretrieve(sample[1], filename=None)[0]\n",
+    "        try:\n",
+    "            file = tarfile.open(temp_file)\n",
+    "            file.extractall(base_path)\n",
+    "            file.close()\n",
+    "        except:\n",
+    "            print('Error extracting on hash: ' + sample[0])\n",
+    "            issue_hashes.append(sample[0])\n",
     "            try:\n",
-    "                file = tarfile.open(temp_file)\n",
-    "                file.extractall(base_path)\n",
-    "                file.close()\n",
-    "            except:\n",
-    "                print('Error extracting on hash: ' + sample.hash)\n",
-    "                issue_hashes.append(sample.hash)\n",
-    "                try:\n",
-    "                    shutil.rmtree(base_path)\n",
-    "                except:\n",
-    "                    pass\n",
-    "                continue\n",
-    "            with open(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json') as default_path:\n",
-    "                try:\n",
-    "                    json.load(default_path)\n",
-    "                except:\n",
-    "                    print('Error loading JSON on hash: ' + sample.hash)\n",
-    "                    issue_hashes.append(sample.hash)\n",
-    "                    continue\n",
-    "            json_size = os.stat(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json').st_size\n",
-    "            if json_size >= 100000000:\n",
-    "                # GitHub will not host files larger than 100 MB, this removes and logs these files for compatability\n",
-    "                print('JSON file too large on hash: ' + sample.hash)\n",
-    "                large_hashes.append(sample.hash)\n",
     "                shutil.rmtree(base_path)\n",
-    "                continue\n",
-    "            shutil.move(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json', base_path + '/sample_for_analysis.apk.json')\n",
-    "            shutil.rmtree(base_path + '/sample_for_analysis.apk')\n",
+    "            except:\n",
+    "                pass\n",
+    "            return\n",
+    "        default_path = open(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json')\n",
+    "        try:\n",
+    "            json.load(default_path)\n",
+    "            default_path.close()\n",
+    "        except:\n",
+    "            print('Error loading JSON on hash: ' + sample[0])\n",
+    "            issue_hashes.append(sample[0])\n",
+    "            default_path.close()\n",
+    "            return\n",
+    "        json_size = os.stat(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json').st_size\n",
+    "        if json_size >= 100000000:\n",
+    "            # GitHub will not host files larger than 100 MB, this removes and logs these files for compatability\n",
+    "            print('JSON file too large on hash: ' + sample[0])\n",
+    "            large_hashes.append(sample[0])\n",
+    "            shutil.rmtree(base_path)\n",
+    "            return\n",
+    "        shutil.move(base_path + '/sample_for_analysis.apk/sample_for_analysis.apk.json', base_path + '/sample_for_analysis.apk.json')\n",
+    "        shutil.rmtree(base_path + '/sample_for_analysis.apk')\n",
     "\n",
-    "ingest_loop(ref_raw)"
+    "ref_raw.apply(lambda x: ingest_loop(x.to_numpy()), axis = 1)"
    ]
   },
   {
