handling of url exceptions

--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -97,7 +97,12 @@
     "    last_hash = sample[0]\n",
     "    if '.tar.gz' in sample[1]:\n",
     "        base_path = sample[2].lower() + '/' + sample[0]\n",
-    "        temp_file = urllib.request.urlretrieve(sample[1], filename=None)[0]\n",
+    "        try:\n",
+    "            temp_file = urllib.request.urlretrieve(sample[1], filename=None)[0]\n",
+    "        except:\n",
+    "            print('Error loading URL on hash: ' + sample[0])\n",
+    "            issue_hashes.append(sample[0])\n",
+    "            return\n",
     "        try:\n",
     "            file = tarfile.open(temp_file)\n",
     "            file.extractall(base_path)\n",
